Fix 'Redo search' button hidden after collapsing scrolled down filters

--- a/app/assets/stylesheets/config/variables.css.scss
+++ b/app/assets/stylesheets/config/variables.css.scss
@@ -77,6 +77,7 @@ $logo-width: 110px;
 $sessions-list-width: 238px;
 $sessions-list-height: 160px;
 $action-container-height: 60px;
+$session-type-nav-height: 45px;
 
 // spacing
 $input-padding: 7px;
